js/js.translator/testData/incremental/invalidation/changedDependencyThroughUserLib/userLib/file2.kt
fun bar2(): Int = foo2()
